erDiagram
    USERS {
        TEXT id PK
        TEXT created_at
        TEXT updated_at
        TEXT first_name
        TEXT last_name
        TEXT email UK
        TEXT password
        INTEGER is_admin
    }

    PLACES {
        TEXT id PK
        TEXT created_at
        TEXT updated_at
        TEXT title
        TEXT description
        REAL price
        REAL latitude
        REAL longitude
        TEXT owner_id FK
    }

    REVIEWS {
        TEXT id PK
        TEXT created_at
        TEXT updated_at
        TEXT text
        INTEGER rating
        TEXT user_id FK
        TEXT place_id FK
    }

    AMENITIES {
        TEXT id PK
        TEXT created_at
        TEXT updated_at
        TEXT name UK
    }

    PLACE_AMENITY {
        TEXT place_id PK, FK
        TEXT amenity_id PK, FK
    }

    USERS ||--o{ PLACES : owns
    USERS ||--o{ REVIEWS : writes
    PLACES ||--o{ REVIEWS : receives
    PLACES ||--o{ PLACE_AMENITY : links
    AMENITIES ||--o{ PLACE_AMENITY : links
